basic layout and some facts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML 5 Boilerplate</title>
+    <title>Tasneemode</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="header">
+      <h3>Tasneemode</h3>
+    </div>
+    <h1 class="name">Tasneem Profile and Facts</h1>
+    <p class="center text-center bold">Tasneem Profile and Facts</p>
+    <img
+      class="profile-pic center"
+      src="tasneem.JPG"
+      alt="Tasneem, the prettiest girl in the world"
+    />
+    <p class="center text-center">
+      <b>Tasneem</b> (তাসনীম) is the prettiest, sweetest, smartest, funniest
+      girl in the world and my girlfriend.
+    </p>
+    <div class="text-center center">
+        <span style="background-color: #f88639">Stage Name:</span>&nbsp;Anika Sabrine<br><br>
+        <span style="background-color: #f88639">Birth Name:</span> Tasneem (তাসনীম)<br><br>
+        <span style="background-color: #f88639">Position:</span> My Heart<br><br>
+        <span style="background-color: #f88639">Birthday:</span>&nbsp;November 27th<br><br>
+        <span style="background-color: #f88639">Zodiac Sign:</span>&nbsp;Sagittarius<br><br>
+        <span style="background-color: #f88639">Height:</span> 5’0″ - 5'3"<br><br>
+        <span style="background-color: #f88639">Blood Type:</span>&nbsp;B+<br><br>
+        <span style="background-color: #f88639">Nationality:</span> Bangladeshi<br><br>
+        <span style="background-color: #f88639">Representative Emoticon:</span> 🧡<br><br>
+        <span style="background-color: #f88639">Instagram:</span> <a href="https://www.instagram.com/tasneem.alam.1127/?hl=en" target="_blank" rel="noopener nofollow">@tasneem.alam.1127</a><br><br>
+        <span style="background-color: #f88639">Spotify Playlist:</span> <a href="https://open.spotify.com/playlist/0624xzROqRvol47cAf7QW3?si=7a091d81f50c4a40" target="_blank" rel="nofollow noopener">TAZ & RAY</a><br><br>
+        <span style="background-color: #f88639">Fandom Name:</span> Raymond</p><br> 
+    </div>
+    <p style="text-align: center"><strong><span style="background-color: #f7f7ab"><span style="background-color: #f88639">Tasneem Facts:</span><br>
+</span></strong>
+– Tasneem is from Queens, New York.<br>
+– Tasneem and I met on March 17th, 2023, became friends on March 22nd, 2023, and began dating on July 19th, 2023.<br>
+– Her representative animal is a Bunny.<br>
+– Her representative flower is a Tulip.<br>
+– Her favorite color is Orange.<br>
+– Her favorite way to have eggs is scrambled, with parotta.<br>
+– Tasneem loves lego bouqets and building legos.<br>
+
+
+<br>
+<em>Profile By&nbsp;<a href="https://raymondluo.dev/" target="_blank" rel="nofollow"><strong>Raymond</strong></a></em>
     <!-- <script src="index.js"></script> -->
   </body>
 </html>
