--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 – Her favorite color is Orange.<br>
 – Her favorite way to have eggs is scrambled, with parotta.<br>
 – Tasneem loves lego bouqets and building legos.<br>
+– Tasneem is a pyromaniac.<br>
+– Tasneem can speak several different languages, including English, Bangla, Korean, Spanish, Japanese, and Chinese.<br>
+– I love Tasneem.<br>
 
 
 <br>
