update height and fandom name

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <span style="background-color: #f88639">Position:</span> My Heart<br><br>
         <span style="background-color: #f88639">Birthday:</span>&nbsp;November 27th<br><br>
         <span style="background-color: #f88639">Zodiac Sign:</span>&nbsp;Sagittarius<br><br>
-        <span style="background-color: #f88639">Height:</span> 5’0″ - 5'3"<br><br>
+        <span style="background-color: #f88639">Height:</span> 5’2″ - 5'3"<br><br>
         <span style="background-color: #f88639">Blood Type:</span>&nbsp;B+<br><br>
         <span style="background-color: #f88639">Nationality:</span> Bangladeshi<br><br>
         <span style="background-color: #f88639">Representative Emoticon:</span> 🧡<br><br>
         <span style="background-color: #f88639">Instagram:</span> <a href="https://www.instagram.com/tasneem.alam.1127/?hl=en" target="_blank" rel="noopener nofollow">@tasneem.alam.1127</a><br><br>
         <span style="background-color: #f88639">Spotify Playlist:</span> <a href="https://open.spotify.com/playlist/0624xzROqRvol47cAf7QW3?si=7a091d81f50c4a40" target="_blank" rel="nofollow noopener">TAZ & RAY</a><br><br>
-        <span style="background-color: #f88639">Fandom Name:</span> Raymond</p><br> 
+        <span style="background-color: #f88639">Fandom Name:</span> Remi</p><br> 
     </div>
     <p style="text-align: center"><strong><span style="background-color: #f7f7ab"><span style="background-color: #f88639">Tasneem Facts:</span><br>
 </span></strong>
