fix name spelling

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       alt="Tasneem, the prettiest girl in the world"
     />
     <p class="center text-center">
-      <b>Tasneem</b> (তাসনীম) is the prettiest, sweetest, smartest, funniest
+      <b>Tasneem</b> (তাসনিম) is the prettiest, sweetest, smartest, funniest
       girl in the world and my girlfriend.
     </p>
     <div class="text-center center">
         <span style="background-color: #f88639">Stage Name:</span>&nbsp;Anika Sabrine<br><br>
-        <span style="background-color: #f88639">Birth Name:</span> Tasneem (তাসনীম)<br><br>
+        <span style="background-color: #f88639">Birth Name:</span> Tasneem (তাসনিম)<br><br>
         <span style="background-color: #f88639">Position:</span> My Heart<br><br>
         <span style="background-color: #f88639">Birthday:</span>&nbsp;November 27th<br><br>
         <span style="background-color: #f88639">Zodiac Sign:</span>&nbsp;Sagittarius<br><br>
