add favorite dinosaur and ocean predator

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 – Her representative flower is a Tulip.<br>
 – Her favorite color is Orange.<br>
 – Her favorite way to have eggs is scrambled, with parotta.<br>
+– Her favorite dinosaur is the stegosaurus.<br>
+– Her favorite ocean predator is the tiger shark.<br>
 – Tasneem loves lego bouqets and building legos.<br>
 – Tasneem is a pyromaniac.<br>
 – Tasneem can speak several different languages, including English, Bangla, Korean, Spanish, Japanese, and Chinese.<br>
