add tasneemode toggle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <div class="header">
       <h3>Tasneemode</h3>
+      <!-- Rounded switch -->
+      <div class="right">
+        <p>Toggle Tasneemode</p>
+        <label class="switch">
+          
+          <input type="checkbox" onclick="toggleDarkMode()">
+          <span class="slider round"></span>
+        </label>
+      </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
     <p class="center text-center bold">Tasneem Profile and Facts</p>
@@ -54,6 +63,6 @@
 
 <br>
 <em>Profile By&nbsp;<a href="https://raymondluo.dev/" target="_blank" rel="nofollow"><strong>Raymond</strong></a></em>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
