initial commit for birthday - includes password

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <div class="header">
       <h3>Tasneemode</h3>
+      <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="birthday.html">Birthday</a>
+      </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
     <p class="center text-center bold">Tasneem Profile and Facts</p>
