--- a/birthday.html
+++ b/birthday.html
@@ -43,7 +43,7 @@
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "iLoveRaymondAndIHadToTypeThisOutAndAlsoGoodJobFindingThisILoveYouBtw";
+        var confirmPassword = "password";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
             window.location="birthdaysuccess.html";
