--- a/secret.html
+++ b/secret.html
@@ -185,6 +185,12 @@
       </g>
   </svg>
   </div>
+  <div class="item" id="p0">
+    <div class="polaroid">
+        <img src="firstmeeting.JPG" >
+        <div class="caption">4/13/23<br>Our First Meeting, Humble Beginnings</div>
+    </div>
+  </div>
   <div class="item" id="p1">
     <div class="polaroid">
         <img src="polaroid1.JPG" >
@@ -235,11 +241,35 @@
   </div>
   <div class="item" id="p9">
     <div class="polaroid">
-        <img src="cutepolaroid.JPG" >
-        <div class="caption">10/12/23<br>I love you</div>
+        <img src="hearts1010.JPG" >
+        <div class="caption">10/10/23<br>You Are This Day's Date (Minus the Year)</div>
     </div>
   </div>
   <div class="item" id="p10">
+    <div class="polaroid">
+        <img src="cutepolaroid.JPG" >
+        <div class="caption">10/12/23<br>Cute AF Polaroids Held By Cute AF Girl</div>
+    </div>
+  </div>
+  <div class="item" id="p11">
+    <div class="polaroid">
+        <img src="carnivalback.JPG" >
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, We're Such a Cute Couple</div>
+    </div>
+  </div>
+  <div class="item" id="p12">
+    <div class="polaroid">
+        <img src="carnivalcarousel.JPG" >
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, You Merry Go Round My Mind All the Time</div>
+    </div>
+  </div>
+  <div class="item" id="p13">
+    <div class="polaroid">
+        <img src="happyhappy.JPG" >
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, Spontaneous Music Room Selfies</div>
+    </div>
+  </div>
+  <div class="item" id="p14">
     <div class="polaroid">
         <!-- <img src="cutepolaroid.JPG" > -->
         <div class="caption">Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
