--- a/birthday.html
+++ b/birthday.html
@@ -8,6 +8,10 @@
           <title>Tasneemode</title>
           <link rel="stylesheet" href="style.css" />
           <link rel="stylesheet" href="login.css" />
+          <link
+      href="https://fonts.googleapis.com/css?family=Open Sans"
+      rel="stylesheet"
+    />
         </head>
 <body>
     <div class="header">
