--- a/secret.html
+++ b/secret.html
@@ -8,6 +8,10 @@
           <title>Tasneemode</title>
           <link rel="stylesheet" href="style.css" />
           <link rel="stylesheet" href="polaroid.css" />
+          <link
+      href="https://fonts.googleapis.com/css?family=Open Sans"
+      rel="stylesheet"
+    />
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         </head>
 <body>
@@ -271,8 +275,8 @@
   </div>
   <div class="item" id="p14">
     <div class="polaroid">
-        <!-- <img src="cutepolaroid.JPG" > -->
-        <div class="caption">Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
+        <img src="insert.png" >
+        <div class="caption">11/27/23<br>Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
     </div>
   </div>
 
