--- a/secret.html
+++ b/secret.html
@@ -29,7 +29,7 @@
     
     <div class="gallery">
     <div class="camera">
-        <h2 class="snap">Snap a picture!</h2>
+        <h2 class="snap">Snap a picture! 20/20</h2>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 430 430" width="430" height="430" preserveAspectRatio="xMidYMid meet"
       style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px); content-visibility: visible;">
