add llama alternative representative animal

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </span></strong>
 – Tasneem is from Queens, New York.<br>
 – Tasneem and I met on March 17th, 2023, became friends on March 22nd, 2023, and began dating on July 19th, 2023.<br>
-– Her representative animal is a Bunny.<br>
+– Her representative animal is a Bunny/Llama.<br>
 – Her representative flower is a Tulip.<br>
 – Her favorite color is Orange.<br>
 – Her favorite way to have eggs is scrambled, with parotta.<br>
