--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 – Her favorite ocean predator is the tiger shark.<br>
 – Tasneem loves lego bouqets and building legos.<br>
 – Tasneem is a pyromaniac.<br>
+– Tasneem likes rosmalai, shemai, and handesh. Her favorite cake is ice cream cake.<br>
 – Tasneem can speak several different languages, including English, Bangla, Korean, Spanish, Japanese, and Chinese.<br>
 – I love Tasneem.<br>
 
