--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 – Her favorite way to have eggs is scrambled, with parotta.<br>
 – Her favorite dinosaur is the stegosaurus.<br>
 – Her favorite ocean predator is the tiger shark.<br>
+– Her bias in <a href="https://kprofiles.com/txt-members-profile/">TXT</a> is <a href="https://kprofiles.com/soobin-txt-profile-facts/">Soobin</a>.<br>
+– Her bias in <a href="https://kprofiles.com/bts-bangtan-boys-members-profile/">BTS</a> is <a href="https://kprofiles.com/j-hope-facts-profile/">J-Hope</a>.<br>
 – Tasneem loves lego bouqets and building legos.<br>
 – Tasneem is a pyromaniac.<br>
 – Tasneem likes rosmalai, shemai, and handesh. Her favorite cake is ice cream cake.<br>
