--- a/iloveyou.html
+++ b/iloveyou.html
@@ -18,7 +18,7 @@
         <h3>Tasneemode</h3>
         <div class="topnav">
           <a href="index.html">Home</a>
-          <a class="active" href="birthday.html">Birthday</a>
+          <a class="active" href="iloveyou.html">I Love You</a>
         </div>
       </div>
     
@@ -50,7 +50,7 @@
         var confirmPassword = "password";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-            window.location="birthdaysuccess.html";
+            window.location="iloveyouhearts.html";
         }
         else{
             alert("Passwords do not match.");
