--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 – Her bias in <a href="https://kprofiles.com/bts-bangtan-boys-members-profile/">BTS</a> is <a href="https://kprofiles.com/j-hope-facts-profile/">J-Hope</a>.<br>
 – Tasneem loves lego bouqets and building legos.<br>
 – Tasneem is a pyromaniac.<br>
-– Tasneem likes rosmalai, shemai, and handesh. Her favorite cake is ice cream cake.<br>
+– Tasneem likes rosmalai, shemai, and handesh. Her favorite cake is cookies and cream ice cream cake.<br>
 – Tasneem can speak several different languages, including English, Bangla, Korean, Spanish, Japanese, and Chinese.<br>
 – I love Tasneem.<br>
 
