--- a/secret.html
+++ b/secret.html
@@ -300,23 +300,35 @@
   </div>
   <div class="item" id="p11">
     <div class="polaroid">
+        <img src="bobbyvertigo.JPG" >
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, Exchange of Bobby and Vertigo</div>
+    </div>
+  </div>
+  <div class="item" id="p12">
+    <div class="polaroid">
         <img src="carnivalback.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, We're Such a Cute Couple</div>
     </div>
   </div>
-  <div class="item" id="p12">
+  <div class="item" id="p13">
     <div class="polaroid">
         <img src="carnivalcarousel.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, You Merry Go Round My Mind All the Time</div>
     </div>
   </div>
-  <div class="item" id="p13">
+  <div class="item" id="p14">
     <div class="polaroid">
         <img src="happyhappy.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, Spontaneous Music Room Selfies</div>
     </div>
   </div>
-  <div class="item" id="p14">
+  <div class="item" id="p15">
+    <div class="polaroid">
+        <img src="queensday.JPG" >
+        <div class="caption">10/31/23<br>Jamaica Multiplex Cinemas, Revisiting the photo booth that didn't work when we were first there</div>
+    </div>
+  </div>
+  <div class="item" id="p16">
     <div class="polaroid">
         <img src="insert.png" >
         <div class="caption">11/27/23<br>Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
