--- a/secret.html
+++ b/secret.html
@@ -289,7 +289,7 @@
   <div class="item" id="p9">
     <div class="polaroid">
         <img src="hearts1010.JPG" >
-        <div class="caption">10/10/23<br>You Are This Day's Date (Minus the Year)</div>
+        <div class="caption">10/10/23<br>You Are This Day's Date (Excluding the Year)</div>
     </div>
   </div>
   <div class="item" id="p10">
@@ -324,11 +324,23 @@
   </div>
   <div class="item" id="p15">
     <div class="polaroid">
+        <img src="1026.JPG" >
+        <div class="caption">10/26/23<br>Accidentally matched outfits a lil, didn't want to be photographed</div>
+    </div>
+  </div>
+  <div class="item" id="p16">
+    <div class="polaroid">
         <img src="queensday.JPG" >
         <div class="caption">10/31/23<br>Jamaica Multiplex Cinemas, Revisiting the photo booth that didn't work when we were first there</div>
     </div>
   </div>
-  <div class="item" id="p16">
+  <div class="item" id="p17">
+    <div class="polaroid">
+        <img src="112.JPG" >
+        <div class="caption">11/2/23<br>Paris Baguette, After a Long Day of Work</div>
+    </div>
+  </div>
+  <div class="item" id="p18">
     <div class="polaroid">
         <img src="insert.png" >
         <div class="caption">11/27/23<br>Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
