--- a/secret.html
+++ b/secret.html
@@ -253,7 +253,7 @@
   <div class="item" id="p3">
     <div class="polaroid">
         <img src="tarot.JPG" >
-        <div class="caption">8/1/23<br>National Girlfriend Day, Meow Parlour, This was Fate</div>
+        <div class="caption">8/1/23<br>National Girlfriend Day, Meow Parlour, Our Tarot Reading</div>
     </div>
   </div>
   <div class="item" id="p4">
