--- a/secret.html
+++ b/secret.html
@@ -262,85 +262,104 @@
         <div class="caption">8/1/23<br>National Girlfriend Day, First Selfies in K-town</div>
     </div>
   </div>
-  <div class="item" id="p5">
+  <!-- <div class="item" id="p5">
     <div class="polaroid">
         <img src="secondheart.JPG" >
         <div class="caption">8/1/23<br>National Girlfriend Day, After Helping Me Shop</div>
     </div>
-  </div>
-  <div class="item" id="p6">
+  </div> -->
+  <div class="item" id="p5">
     <div class="polaroid">
         <img src="hallofscience.JPG" >
         <div class="caption">8/19/23<br>1-Month Anniversary, Hall of Science, You Didn't Want to Take Pictures</div>
     </div>
   </div>
-  <div class="item" id="p7">
+  <div class="item" id="p6">
     <div class="polaroid">
         <img src="sciencephotobooth.JPG" >
         <div class="caption">8/19/23<br>1-Month Anniversary, Hall of Science, We Took Pictures</div>
     </div>
   </div>
-  <div class="item" id="p8">
+  <div class="item" id="p7">
     <div class="polaroid">
         <img src="bdayselfie.JPG" >
         <div class="caption">9/25/23<br>You Agreed to Take Selfies on my Birthday</div>
     </div>
   </div>
-  <div class="item" id="p9">
+  <div class="item" id="p8">
     <div class="polaroid">
         <img src="hearts1010.JPG" >
         <div class="caption">10/10/23<br>You Are This Day's Date (Excluding the Year)</div>
     </div>
   </div>
-  <div class="item" id="p10">
+  <div class="item" id="p9">
     <div class="polaroid">
         <img src="cutepolaroid.JPG" >
-        <div class="caption">10/12/23<br>Cute AF Polaroids Held By Cute AF Girl</div>
+        <div class="caption">10/12/23<br>Cute Polaroids Held By Cute Girl</div>
     </div>
   </div>
-  <div class="item" id="p11">
+  <div class="item" id="p10">
     <div class="polaroid">
         <img src="bobbyvertigo.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, Exchange of Bobby and Vertigo</div>
     </div>
   </div>
-  <div class="item" id="p12">
+  <div class="item" id="p11">
     <div class="polaroid">
         <img src="carnivalback.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, We're Such a Cute Couple</div>
     </div>
   </div>
-  <div class="item" id="p13">
+  <div class="item" id="p12">
     <div class="polaroid">
         <img src="carnivalcarousel.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, You Merry Go Round My Mind All the Time</div>
     </div>
   </div>
-  <div class="item" id="p14">
+  <!-- <div class="item" id="p13">
     <div class="polaroid">
         <img src="happyhappy.JPG" >
         <div class="caption">10/15/23<br>Spirit Weekend Carnival, Spontaneous Music Room Selfies</div>
     </div>
-  </div>
-  <div class="item" id="p15">
+  </div> -->
+  <div class="item" id="p13">
     <div class="polaroid">
         <img src="1026.JPG" >
         <div class="caption">10/26/23<br>Accidentally matched outfits a lil, didn't want to be photographed</div>
     </div>
   </div>
-  <div class="item" id="p16">
+  <div class="item" id="p14">
     <div class="polaroid">
         <img src="queensday.JPG" >
         <div class="caption">10/31/23<br>Jamaica Multiplex Cinemas, Revisiting the photo booth that didn't work when we were first there</div>
     </div>
   </div>
-  <div class="item" id="p17">
+  <div class="item" id="p15">
     <div class="polaroid">
         <img src="112.JPG" >
         <div class="caption">11/2/23<br>Paris Baguette, After a Long Day of Work</div>
     </div>
   </div>
+  <!-- Here will be a picture from 11/11 and maybe one from Holiday market day (then replace second hand heart pic) -->
+  <div class="item" id="p16">
+    <div class="polaroid">
+        <img src="met.JPG" >
+        <div class="caption">11/11/23<br>Revisiting the Met as a couple</div>
+    </div>
+  </div>
+  <div class="item" id="p17">
+    <div class="polaroid">
+        <img src="idol.JPG" >
+        <div class="caption">11/11/23<br>🎵Our Idol Era🎵 Revisiting K-town as a Couple</div>
+    </div>
+  </div>
   <div class="item" id="p18">
+    <div class="polaroid">
+        <img src="ice.JPG" >
+        <div class="caption">11/19/23<br>4-Month Anniversary, Ice Skating at Bryant Park</div>
+    </div>
+  </div>
+  <div class="item" id="p19">
     <div class="polaroid">
         <img src="insert.png" >
         <div class="caption">11/27/23<br>Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
