--- a/iloveyouhearts.html
+++ b/iloveyouhearts.html
@@ -18,7 +18,7 @@
       <h3>Tasneemode</h3>
       <div class="topnav">
         <a href="index.html">Home</a>
-        <a class="active" href="iloveyou.html">I Love You</a>
+        <a class="active" href="iloveyou.html">ILY</a>
       </div>
     </div>
 
