--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h3>Tasneemode</h3>
       <div class="topnav">
         <a class="active" href="index.html">Home</a>
-        <a href="iloveyou.html">I Love You</a>
+        <a href="iloveyou.html">ILY</a>
       </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
