--- a/secret.html
+++ b/secret.html
@@ -19,7 +19,7 @@
         <h3>Tasneemode</h3>
         <div class="topnav">
           <a href="index.html">Home</a>
-          <a href="iloveyou.html">I Love You</a>
+          <a href="iloveyou.html">ILY</a>
           <a class="active" href="secret.html">Secret</a>
         </div>
       </div>
