--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="iloveyou.html">ILY</a>
+        <a href="birthday.html">Birthday</a>
       </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
