--- a/iloveyouhearts.html
+++ b/iloveyouhearts.html
@@ -19,6 +19,7 @@
       <div class="topnav">
         <a href="index.html">Home</a>
         <a class="active" href="iloveyou.html">ILY</a>
+        <a href="birthday.html">Birthday</a>
       </div>
     </div>
 
