--- a/instax.html
+++ b/instax.html
@@ -343,7 +343,7 @@
   <!-- Here will be a picture from 11/11 and maybe one from Holiday market day (then replace second hand heart pic) -->
   <div class="item" id="p16">
     <div class="polaroid">
-        <img src="met.JPG" >
+        <img src="met.jpg" >
         <div class="caption">11/11/23<br>Revisiting the Met as a couple</div>
     </div>
   </div>
