--- a/instax.html
+++ b/instax.html
@@ -307,7 +307,7 @@
   <div class="item" id="p11">
     <div class="polaroid">
         <img src="carnivalback.JPG" >
-        <div class="caption">10/15/23<br>Spirit Weekend Carnival, We're Such a Cute Couple</div>
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, Moments Before Flying Upside-Down</div>
     </div>
   </div>
   <div class="item" id="p12">
@@ -325,7 +325,7 @@
   <div class="item" id="p13">
     <div class="polaroid">
         <img src="1026.JPG" >
-        <div class="caption">10/26/23<br>Accidentally matched outfits a lil, didn't want to be photographed</div>
+        <div class="caption">10/26/23<br>Accidentally matched outfits a lil, you didn't want to be photographed</div>
     </div>
   </div>
   <div class="item" id="p14">
@@ -350,7 +350,7 @@
   <div class="item" id="p17">
     <div class="polaroid">
         <img src="idol.JPG" >
-        <div class="caption">11/11/23<br>🎵Our Idol Era🎵 Revisiting K-town as a Couple</div>
+        <div class="caption">11/11/23<br>🎵Our Idol Era🎵 Revisiting K-town as a Couple, At the Samsung Store</div>
     </div>
   </div>
   <div class="item" id="p18">
@@ -362,7 +362,7 @@
   <div class="item" id="p19">
     <div class="polaroid">
         <img src="insert.png" >
-        <div class="caption">11/27/23<br>Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
+        <div class="caption">11/27/23<br>Your 21st birthday 🧡 Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
     </div>
   </div>
 
