--- a/instax.html
+++ b/instax.html
@@ -307,7 +307,7 @@
   <div class="item" id="p11">
     <div class="polaroid">
         <img src="carnivalback.JPG" >
-        <div class="caption">10/15/23<br>Spirit Weekend Carnival, Moments Before Flying Upside-Down</div>
+        <div class="caption">10/15/23<br>Spirit Weekend Carnival, Moments Before Spinning Upside-Down</div>
     </div>
   </div>
   <div class="item" id="p12">
