--- a/iloveyou.html
+++ b/iloveyou.html
@@ -19,7 +19,7 @@
         <div class="topnav">
           <a href="index.html">Home</a>
           <a class="active" href="iloveyou.html">ILY</a>
-          <a href="birthday.html">Birthday</a>
+          <a href="21.html">Birthday</a>
         </div>
       </div>
     
