--- a/21.html
+++ b/21.html
@@ -20,7 +20,7 @@
         <div class="topnav">
           <a href="index.html">Home</a>
           <a href="iloveyou.html">ILY</a>
-          <a class="active" href="birthday.html">Birthday</a>
+          <a class="active" href="21.html">Birthday</a>
         </div>
       </div>
     
