--- a/instax.html
+++ b/instax.html
@@ -361,7 +361,7 @@
   </div>
   <div class="item" id="p19">
     <div class="polaroid">
-        <img src="insert.png" >
+        <img src="bday.jpg" >
         <div class="caption">11/27/23<br>Your 21st birthday 🧡 Let's create many more happy memories together. I love you so much. Happy birthday angel.</div>
     </div>
   </div>
