--- a/instax.html
+++ b/instax.html
@@ -21,6 +21,7 @@
           <a href="index.html">Home</a>
           <a href="iloveyou.html">ILY</a>
           <a class="active" href="21.html">Birthday</a>
+          <a href="31724.html">1 Year Meetiversary</a>
         </div>
       </div>
 
