--- a/iloveyouhearts.html
+++ b/iloveyouhearts.html
@@ -20,6 +20,7 @@
         <a href="index.html">Home</a>
         <a class="active" href="iloveyou.html">ILY</a>
         <a href="21.html">Birthday</a>
+        <a href="31724.html">1 Year Meetiversary</a>
       </div>
     </div>
 
