--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="iloveyou.html">ILY</a>
         <a href="21.html">Birthday</a>
+        <a href="31724.html">1 Year Meetiversary</a>
       </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
