--- a/clock.html
+++ b/clock.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="playlist.css"></link>
 </head>
 <body>
+  <div class="wrapgrid">
   <div class="header">
     <h3 class="tasneemode">Tasneemode</h3>
     <div class="topnav">
@@ -63,6 +64,7 @@ We talked more and more, soon we were talking every day. Raccoon memes, talks of
     <input type="checkbox" onclick="toggleDarkMode()">
     <span class="slider round"></span>
   </label>
+</div>
 </div>
     <script src="index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
