--- a/clock.html
+++ b/clock.html
@@ -18,6 +18,7 @@
       <a href="iloveyou.html">ILY</a>
       <a href="21.html">Birthday</a>
       <a class="active" href="31724.html">1 Year Meetiversary</a>
+      <a href="year.html">Anniversary</a>
     </div>
   </div>
 	<h1>Happy 1 Year Meetiversary, darling. Drag the clock hand to go through some of our time together.</h1>
