--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="iloveyou.html">ILY</a>
         <a href="21.html">Birthday</a>
         <a href="31724.html">1 Year Meetiversary</a>
+        <a href="year.html">Anniversary</a>
       </div>
     </div>
     <h1 class="name">Tasneem Profile and Facts</h1>
