--- a/instax.html
+++ b/instax.html
@@ -22,6 +22,7 @@
           <a href="iloveyou.html">ILY</a>
           <a class="active" href="21.html">Birthday</a>
           <a href="31724.html">1 Year Meetiversary</a>
+          <a href="year.html">Anniversary</a>
         </div>
       </div>
 
