--- a/iloveyouhearts.html
+++ b/iloveyouhearts.html
@@ -21,6 +21,7 @@
         <a class="active" href="iloveyou.html">ILY</a>
         <a href="21.html">Birthday</a>
         <a href="31724.html">1 Year Meetiversary</a>
+        <a href="year.html">Anniversary</a>
       </div>
     </div>
 
