--- a/letter71724.html
+++ b/letter71724.html
@@ -23,7 +23,7 @@
                   <br><br>
                   One fateful encounter. One fateful butterfly. One more fateful day.
                   <br><br>
-                  We've looked back a lot at where we started and before, and looking back, it's always been a miracle that we've foudn our way here. I'm truly blessed.
+                  We've looked back a lot at where we started and before, and looking back, it's always been a miracle that we've found our way here. I'm truly blessed.
                   <br><br>
                   In these 365 days, I've come to know love, care, comfort, warmth, and happiness, all at your hand.
                   <br><br>
