--- a/year.html
+++ b/year.html
@@ -18,6 +18,7 @@
       <a href="21.html">Birthday</a>
       <a href="31724.html">1 Year Meetiversary</a>
       <a class="active" href="year.html">Anniversary</a>
+      <a href="cake.html">Birthday Part 2!</a>
     </div>
   </div>
   <iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/XBiLsZBqh24?si=nXl7ytqFlA-lkxmn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
