--- a/21.html
+++ b/21.html
@@ -23,6 +23,7 @@
           <a class="active" href="21.html">Birthday</a>
           <a href="31724.html">1 Year Meetiversary</a>
           <a href="year.html">Anniversary</a>
+          <a href="cake.html">Birthday Part 2!</a>
         </div>
       </div>
     
