--- a/31724.html
+++ b/31724.html
@@ -23,6 +23,7 @@
           <a href="21.html">Birthday</a>
           <a class="active" href="31724.html">1 Year Meetiversary</a>
           <a href="year.html">Anniversary</a>
+          <a href="cake.html">Birthday Part 2!</a>
         </div>
       </div>
     
