--- a/iloveyou.html
+++ b/iloveyou.html
@@ -22,6 +22,7 @@
           <a href="21.html">Birthday</a>
           <a href="31724.html">1 Year Meetiversary</a>
           <a href="year.html">Anniversary</a>
+          <a href="cake.html">Birthday Part 2!</a>
         </div>
       </div>
     
